--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Game_Engine</name>
+	<name>java-game-box-project-2-pinky-and-blinky</name>
 	<comment></comment>
 	<projects>
 	</projects>
